# qt-study

./: .gitignore  CMakeLists.txt
QT5/: CMakeLists.txt  DOC.md
QT5-DOC/: DOC.md
QT5/01_stater/: CMakeLists.txt  mainwindow.cpp  mybutton2.cpp  mybutton2.h
QT5/02_SignalAndSlot/: mywidget.cpp  teacher.h
QT5/03_QtSource/: CMakeLists.txt  mainwindow.cpp  res.qrc
QT5/04_QtDialog/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
QT5/05_QtLayout/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT5/06_QtControl/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
QT5/HeiMa/: DOC.md
QT5/HeiMa/01_stater/: 01_stater.pro  mybutton.cpp  mybutton.h
QT5/HeiMa/02_SignalAndSlot/: 02_SignalAndSlot.pro  CMakeLists.txt  mywidget.cpp  mywidget.h  mywidget.ui  student.cpp  student.h
QT5/HeiMa/03_QtSource/: main.cpp  mainwindow.h  mainwindow.ui
